--- a/business-logic/src/main/resources/application.properties
+++ b/business-logic/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.application.name=business-logic
 spring.datasource.url=jdbc:postgresql://localhost:5432/FlowerShop
 spring.datasource.username=postgres
 spring.datasource.password=123
+server.port=8081
