add security completer

--- a/manager-app/src/main/resources/application.properties
+++ b/manager-app/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=manager-app
 api.path=http://localhost:8081
 server.port=8083
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/FlowerShop
+spring.datasource.username=postgres
+spring.datasource.password=123
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
