--- a/business-logic/src/main/resources/application.properties
+++ b/business-logic/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=business-logic
 
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/FlowerShop
-spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.url=jdbc:postgresql://localhost:5432/${env.POSTGRES_PROJECT}
+spring.datasource.username=${env.POSTGRES_USER}
+spring.datasource.password=${env.POSTGRES_PASSWORD}
 server.port=8081
 
