Обновил код для вывода количества цветов в базе данных

--- a/business-logic/src/main/resources/application.properties
+++ b/business-logic/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.application.name=business-logic
 
 
-
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/${env.POSTGRES_PROJECT}
 spring.datasource.username=${env.POSTGRES_USER}
 spring.datasource.password=${env.POSTGRES_PASSWORD}
-server.port=8081
+server.port=${env.SERVER_PORT}
 
