--- a/manager-app/src/main/resources/application.properties
+++ b/manager-app/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=manager-app
-api.path=http://localhost:8081
-server.port=8083
+api.path=${env.API_PATH}
+server.port=${env.SERVER_PORT}
